--- a/index.css
+++ b/index.css
@@ -1,11 +1,15 @@
 /*======= Create a new universal selector that changes the font color to: #3C373B */
 
+* {
+  color: #3C373B;
+}
 
 h1 {
   font-family: 'Gaegu', cursive;
   margin: 20px 0;
   /*=======  Update the font size to 60px and center the text */
-  font-size: 10px;
+  font-size: 60px;
+  text-align: center;
 }
 
 h2, h3, h4, h5, h6 {
@@ -13,8 +17,21 @@ h2, h3, h4, h5, h6 {
   margin-bottom: 0;
   padding: 0 10px;
   /*=======  Update the font size to 30px */
-  font-size: 10px;
+  font-size: 30px;
 }
+
+
+p {
+  font-size: 16px;
+  font-family: roboto;
+  padding: 10px;
+  line-height: 1.4;
+}
+
+/* #about {
+  justify-content: center;
+  align-items: center;
+} */
 
 /*======= Create a selector for ALL p tags in the site to have the following styles:
 
@@ -32,17 +49,27 @@ line-height: 1.4;
 
 */
 
+img {
+  border-radius: 10px;
+}
+
+.img1 {
+  width: 100%;
+}
+
 .content-row {
   display: flex;
 }
 
 .content-row div {
+  margin: 20px;
   /*======= create a margin propery.  Set the value to 20px */
 }
 
 .container {
   /*======= create a width property. Set the value to 600px */
   margin: 0 auto;
+  width: 600px;
 }
 
 .container header nav a {
@@ -54,17 +81,32 @@ line-height: 1.4;
   color: white;
   text-decoration: none;
   margin-bottom: 20px;
-   /*======= create a background property. Set the value to #F87B99 */
+  background: #F87B99;
   
 }
+/*======= create a background property. Set the value to #F87B99 */
 
 .container header nav a:hover {
+  background: white;
+  color: pink;
 /*======= create a background property and set it to white.  Then create a color property and set it's value to pink. */
 }
 
 /*======= Create a selector for the about section to have the following styles:
   margin-top: 20px;
 */
+
+/* .about {
+  margin: 0 10px;
+  border: 1px solid lightgray;
+  padding: 20px;
+  display: inline-block;
+  border-radius: 20px;
+  color: white;
+  text-decoration: none;
+  margin-bottom: 20px;
+  background: #F87B99;
+} */
 
 .contact-section {
   border-top: 1px dashed black;
@@ -79,6 +121,9 @@ line-height: 1.4;
 /*======= Create a selector for the address tag in the contact-section class to have the following styles:
    line-height: 2;
 */
+.contact {
+  line-height: 2;
+}
 
 footer {
   width: 100%;
@@ -88,6 +133,7 @@ footer {
 
 footer .footer-content { 
   margin: 0 auto; 
+  width: 600px;
   /*======= create a width property. Set the value to 600px */
   
 }
@@ -101,6 +147,11 @@ footer nav {
   display: flex;
 }
 
+footer a {
+  margin: 10px;
+  color: black;
+  text-decoration: underline;
+}
 /*======= Create a selector for the anchor tag in the footer to have the following styles:
   margin: 10px;
   color: black;
@@ -115,8 +166,30 @@ footer nav a:first-child {
 /*======= Create a hover state for the anchor tag in the footer nav to have the following styles:
   color: white;
 */
+footer nav a:hover {
+  color: white;
+ }
+ 
 
 footer .footer-content .copyright {
   padding: 20px 0;
+  text-align: center;
    /*======= center the text here */
+}
+
+.container .cupcakes {
+  display: flex;
+  flex-direction: row;
+}
+
+.container .cookies {
+  display: flex;
+  flex-direction: row-reverse;
+  flex-wrap: wrap;
+}
+
+.container .catering {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
